# hidapi-rs

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE.txt  README.md  build.rs
etc/hidapi/: LICENSE-bsd.txt  LICENSE-gpl3.txt  LICENSE-orig.txt  LICENSE.txt
etc/hidapi/doxygen/: Doxyfile
etc/hidapi/hidapi/: hidapi.h
etc/hidapi/hidtest/: hidtest.cpp
etc/hidapi/libusb/: hid.c
etc/hidapi/linux/: hid.c
etc/hidapi/m4/: ax_pthread.m4  pkg.m4
etc/hidapi/mac/: hid.c
etc/hidapi/testgui/: test.cpp
etc/hidapi/windows/: hid.c
etc/hidapi/windows/ddk_build/: makefile
examples/: co2mon.rs  lshid.rs  readhid.rs
src/: ffi.rs  lib.rs
